--- a/style.css
+++ b/style.css
@@ -1,53 +1,219 @@
-#czas {
-  color: red;
-  font-size: 34px;
-  font-weight: bold;
+* {
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
+}
+
+body,
+ul,
+li {
+    margin: 0;
+    padding: 0;
+}
+
+p,
+li,
+h1,
+h2,
+h3,
+h4 {
+    color: #4e4e4e;
+}
+
+body {
+    background: #f7f7f7;
+}
+
+.wrapper {
+    width: 96%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 2%;
+}
+
+header {
+    background: #e5e5e5;
+    padding: 20px 0;
+}
+
+header h1 {
+    margin: 0;
+    text-indent: -10000px;
+    background: url(img/logo.jpg) no-repeat;
+    width: 130px;
+    float: left;
+}
+
+header nav {
+    float: right;
+}
+
+header:after {
+    display: block;
+    content: "";
+    clear: both;
+}
+
+
+header nav h2 {
+    line-height: 0;
+    margin: 0;
+    text-indent: -10000px;
+}
+
+header nav li {
+    list-style-type: none;
+    float: left;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+header nav li a {
+    text-decoration: none;
+    color-interpolation-filters: #4e4e4e;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+header nav li a.current {
+    color: #1abb9c;
+}
+
+#banner img {
+    width: 100%;
+}
+
+#banner {
+    max-height: 500px;
+    overflow: hidden;
+}
+
+#spoints {
+    margin-top: 60px;
+}
+
+#spoints li {
+    float: left;
+    width: 23%;
+    padding: 1%;
+    text-align: center;
+    list-style-type: none;
+    line-height: 1.6em;
+}
+
+#spoints:after {
+    display: block;
+    content: "";
+    clear: both;
+}
+
+#lastwork {
+    padding-top: 30px;
+    margin-top: 30px;
+    border-top: 2px solid #e4e4e4;
 
 }
 
-#data {
-  color: green;
-  font-size: 34px;
-  font-weight: bold;
-  }
-  
-#game{
-	  margin: auto;
-	  width: 600px;
-	  height: 300px;
-	  border: 2px solid black; 
-  }
-  
-#hero{
-	  width: 30px;
-	  height: 60px;
-	  background-color: green;
-      position: relative;
-      top:240px;
-  }
-.animate
- {
-	 animation: jump 500ms;
- }
- 
-#block{
-	  width: 25px;
-	  height: 25px;
-	  background-color: darkred; 
-	  position: relative;
-	  top:215px;
-	  left:575px;
-	  animation: block1 1s infinite linear;
-  }
-   
-@keyframes block1 {
-	0%{left:575px;}
-	100%{left: -1px;}
+#lastwork h2 {
+    text-transform: uppercase;
+    font-size: 20px;
+    margin-bottom: 40px
 }
 
-@keyframes jump {
-	0%{top:240px;}
-	30%{top:170px;}
-	70%{top:170px;}
-	100%{top:240px;}
+#lastwork li {
+    width: 32%;
+    float: left;
+    list-style-type: none;
+}
+
+#lastwork img {
+    width: 100%;
+}
+
+#lastwork li:nth-child(2) {
+    margin: 0 2%
+}
+
+#lastwork:after {
+    display: block;
+    content: "";
+    clear: both;
+}
+
+#lastwork h3 {
+    margin-bottom: 0;
+}
+
+#lastwork p {
+    line-height: 1.6em;
+}
+
+p.tags {
+    color: #bbb;
+    font-size: 14px;
+    margin-top: 5px;
+}
+
+#quote {
+    margin-top: 60px;
+    width: 60%;
+    padding: 40px 20%;
+    background: url(img/quote.jpg) no-repeat center 20px;
+    background-color: #efefef;
+    color: #4e4e4e;
+    font-size: 20px;
+    line-height: 1.6em;
+    text-align: center;
+}
+
+footer{
+    background: #202020;
+    padding: 30px 0;
+    border-top: 10px solid #151515;
+}
+
+footer h4{
+    margin: 0;
+    color: #555;
+    text-transform: uppercase;
+    font-size: 18px ;
+
+}
+
+footer ul{
+    float:left;
+    width: 25%;
+    list-style-type: none;
+}
+
+footer:after{
+    content: "";
+    display: block;
+    clear: both;
+
+}
+
+footer li{
+    color:#aaa;
+    width: 80%;
+    margin: 20px 0;
+    font-size: 14px;
+    line-height: 1.6em;
+
+}
+
+footer li.tw{
+    padding-left: 20px;
+    background: url(img/tweet.png) no-repeat left 6px;
+}
+
+#copyright{
+    padding-top: 30px;
+    clear: both;
+    margin-top: 30px;
+    float:left;
+    width: 100%;
+    border-top: 2px solid #333;
+    color:#999;
+    font-size: 14px;
+    text-align: center;
 }
